--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h2>Grocery List</h2>
+        <h3>You are welcomed here</h3>
         <form id="form">
             <input  id="itemName" type="text" placeholder="Item Name" />
             <input id="itemQuantity" type="number" name="itemQuantity" placeholder="Item Quantity"  />
